--- a/README
+++ b/README
@@ -1,1 +1,23 @@
+<br>
 
+<h1 align="center">😀 DOS TOOL 😀</h1>
+
+<br>
+
+<p align="center">in order to start the ip grabber you have to take the command below and replace the following parameters <link> and <user>, after which 2 consoles will be generated in which there will be the ip grabber log in one and a simple one in the other ngrok card.</p>
+
+<br>
+  
+```batch
+Usage: python main.py <url>
+```
+```batch
+Example: python main.py https://example.com
+```
+<br>
+<br>
+
+<p align="center">
+  
+</p>
+<br>
